# baltic

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
baltic/: baltic.py  samogitia.py  utils.py
tests/: testsuite.py
